fix overflow in admin page

--- a/src/app/pages/admin-dashboard-page/admin-dashboard-page.component.css
+++ b/src/app/pages/admin-dashboard-page/admin-dashboard-page.component.css
@@ -2,6 +2,8 @@ main {
     display: grid;
     grid-template-columns: 12rem 1fr;
     align-items: start;
+    overflow: hidden;
+    max-height: 100dvh;
 }
 .content {
     max-width: 100dvw;
